--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -67,6 +67,52 @@
             flex: 0 0 180px
 
 @media screen and (max-width: 1024px)
+    .header-top
+        min-height: 60px
+        &__logo-box
+            top: 9px
+        &__menu-icon
+            margin-top: 20px
+        &__list
+            padding: 0
+            &-item
+                padding: 10px 20px
+        &__logo-box._changed
+            top: 19px
+            left: 125px
+            font-weight: bold
+            font-size: 20px
+            line-height: 28px
+            justify-content: flex-start
+    .header
+        &-links-mobile
+            width: 100%
+            max-width: 130px
+            height: 46px
+            display: inline-flex
+            justify-content: space-between
+            align-items: center
+            position: absolute
+            left: auto
+            right: 0
+            bottom: 0
+            top: 10px
+        &-link-mobile
+            padding: 10px
+            svg
+                color: $color-Black
+    .mobile
+        &-cart
+            position: relative
+            span
+                position: absolute
+                top: 50%
+                left: 50%
+                transform: translate(-50%, -50%)
+                font-size: 11px
+
+    .header-bottom
+        margin: 60px 0 0 0
     .section
         margin: 70px 0 0 0
         &__title
@@ -88,13 +134,13 @@
             width: 100%
             height: 100%
             background-color: $color-White
-            padding: 100px 40px
+            padding: 60px 0
             margin: 0
             transition: all 0.5s ease 0s
             z-index: 14
         &__body._active
             left: 0
-            padding: 100px 20px
+            // padding: 60px 20px
             .header-top__list.left
                 width: 100%
                 .header-top__list-item
@@ -119,7 +165,6 @@
         &__list:last-child
             margin: 0
         &__item
-            padding: 10px
             position: relative
         &__link
             &-btn
@@ -144,7 +189,7 @@
                 transform: rotate(-90deg)
                 position: absolute
                 top: -10px
-                left: 90%
+                left: 98%
         &__icon
             z-index: 50
             display: block
@@ -155,7 +200,6 @@
             cursor: pointer
             transition: all 0.5s ease 0s
             margin-right: auto
-            margin-top: 30px
             & span,
             &::before,
             &::after
@@ -191,17 +235,29 @@
                 transform: rotate(45deg) translate(0, 50%)
                 background-color: $color-Black
     .sub-menu-back-btn._active
-            display: flex
-            width: 46px
-            height: 46px
-            background: url(../images/svg/arrow-down.svg) center no-repeat
-            background-size: 75%
-            transform: rotate(90deg)
-            position: absolute
-            top: 20px
-            left: 0
-            z-index: 15
+        display: flex
+        width: 46px
+        height: 46px
+        background: url(../images/svg/arrow-down.svg) center no-repeat
+        background-size: 75%
+        transform: rotate(90deg)
+        position: absolute
+        top: 10px
+        left: -10px
+        z-index: 15
+    .sub-sub-menu-back-btn._active
+        display: flex
+        width: 46px
+        height: 46px
+        background: url(../images/svg/arrow-down.svg) center no-repeat
+        background-size: 75%
+        transform: rotate(90deg)
+        position: absolute
+        top: -51px
+        left: 5px
+        z-index: 15
     .header-top__list.left
+        border-top: 1px solid $color-Gray_2
         border-bottom: 1px solid $color-Gray_2
         .header-top__list-item
             &:hover> .header-top__menu-link
@@ -225,19 +281,34 @@
         &__sub-list
             &-item-col
                 position: relative
+            &-link-title
+                display: inline-block
+                color: $color-Black
+                font-weight: normal
+                font-size: 18px
+                line-height: 21px
+                margin-bottom: 25px
             &-item-col._active> .header-top__sub-list
                 left: 0
             &-items
                 grid-template-columns: 1fr
+                padding: 20px 35px
         &__sub-list
             width: 100%
             height: 100vh
-            position: absolute
-            top: 0
+            position: fixed
+            top: 61px
             left: 120%
             transition: all 0.3s ease 0s
             background: $color-White
             z-index: 1
+            padding: 10px 50px
+            &-item
+                margin-bottom: 20px
+            &-link
+                font-weight: normal
+                font-size: 18px
+                line-height: 25px
 
     // main
     .main-banner
@@ -705,6 +776,18 @@
             padding: 50px 25px
 
 @media screen and (max-width: 425px)
+    .header-top
+        &__logo-img
+            width: 73px
+        &__list.right
+            .menu__item
+                margin: 0 0 13px 0
+        &__menu-link
+            padding: 10px
+    .menu
+        &__link-btn
+            top: 10px
+            left: 85%
 
     // contacts page
     .contacts
@@ -753,3 +836,11 @@
             margin-bottom: 20px
         &__reviews-btn
             max-width: 100%
+
+@media screen and (max-width: 374px)
+    .header
+        &-links-mobile
+            width: 100%
+            max-width: 105px
+        &-link-mobile
+            padding: 7px
