--- a/src/styles/common/header.sass
+++ b/src/styles/common/header.sass
@@ -4,7 +4,8 @@ header._hidden
 	display: none
 .header-bottom._hidden
 	display: none
-
+.header-links-mobile
+	display: none
 .header-top
 	width: 100%
 	min-height: 86px
@@ -105,7 +106,7 @@ header._hidden
 			left: 0
 			width: 100%
 			height: 100%
-			min-height: 900px
+			min-height: 600px
 			// backdrop-filter: blur(10px)
 			visibility: hidden
 			opacity: 0
@@ -140,7 +141,8 @@ header._hidden
 				text-decoration: underline
 .menu__link-btn,
 .menu__sub-link-btn,
-.sub-menu-back-btn
+.sub-menu-back-btn,
+.sub-sub-menu-back-btn
 	display: none
 
 .header-top__list.right
@@ -159,14 +161,19 @@ header._hidden
 				top: 100%
 				visibility: visible
 				opacity: 1
-				background: url(../images/sub-menu-bg.png) 100% 100% no-repeat
-				background-size: cover
-		.header-top__sub-list-item-col
-			span
-				color: $color-White
+				background: $color-White
+				// background-size: cover
+		.header-top__sub-list-link-title
+			display: inline-block
+			font-weight: normal
+			font-size: 18px
+			line-height: 25px
+			color: $color-Black
+			margin-bottom: 12px
+			&:hover
+				color: $color-graphite
 		.header-top__sub-list-link
-			color: $color-White
-
+			color: $color-Black
 
 // header not home page
 
