--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -585,6 +585,9 @@ header._hidden {
 .header-bottom._hidden {
   display: none; }
 
+.header-links-mobile {
+  display: none; }
+
 .header-top {
   width: 100%;
   min-height: 86px;
@@ -715,7 +718,7 @@ header._hidden {
     left: 0;
     width: 100%;
     height: 100%;
-    min-height: 900px;
+    min-height: 600px;
     visibility: hidden;
     opacity: 0;
     -webkit-transition: 0.3s ease 0s;
@@ -750,7 +753,8 @@ header._hidden {
 
 .menu__link-btn,
 .menu__sub-link-btn,
-.sub-menu-back-btn {
+.sub-menu-back-btn,
+.sub-sub-menu-back-btn {
   display: none; }
 
 .header-top__list.right .header-top__menu-link:hover {
@@ -764,12 +768,18 @@ header._hidden {
     top: 100%;
     visibility: visible;
     opacity: 1;
-    background: url(../images/sub-menu-bg.png) 100% 100% no-repeat;
-    background-size: cover; }
-  .header-top__list.left .header-top__sub-list-item-col span {
-    color: #ffffff; }
+    background: #ffffff; }
+  .header-top__list.left .header-top__sub-list-link-title {
+    display: inline-block;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    color: #000000;
+    margin-bottom: 12px; }
+    .header-top__list.left .header-top__sub-list-link-title:hover {
+      color: #3D3D3D; }
   .header-top__list.left .header-top__sub-list-link {
-    color: #ffffff; } }
+    color: #000000; } }
 
 header._white {
   background-color: #ffffff;
@@ -3215,7 +3225,7 @@ footer._hidden {
       max-width: 930px;
       width: 100%;
       border: 1px solid #ffffff;
-      padding: 13px 20px;
+      padding: 13px 50px 13px 20px;
       font-size: 16px;
       line-height: 140%;
       background-color: #3D3D3D;
@@ -3223,6 +3233,10 @@ footer._hidden {
       -webkit-appearance: none;
          -moz-appearance: none;
               appearance: none; }
+      .modal__search-form input::-ms-clear, .modal__search-form input::clear {
+        display: none;
+        width: 0;
+        height: 0; }
   .modal__search-button {
     position: absolute;
     top: 50%;
@@ -3251,6 +3265,8 @@ footer._hidden {
       font-size: 16px;
       line-height: 140%;
       color: #999999; }
+    .modal__search-button svg {
+      color: #ffffff; }
   .modal__title {
     font-weight: bold;
     font-size: 24px;
@@ -3490,6 +3506,59 @@ footer._hidden {
             flex: 0 0 180px; } }
 
 @media screen and (max-width: 1024px) {
+  .header-top {
+    min-height: 60px; }
+    .header-top__logo-box {
+      top: 9px; }
+    .header-top__menu-icon {
+      margin-top: 20px; }
+    .header-top__list {
+      padding: 0; }
+      .header-top__list-item {
+        padding: 10px 20px; }
+    .header-top__logo-box._changed {
+      top: 19px;
+      left: 125px;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 28px;
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start; }
+  .header-links-mobile {
+    width: 100%;
+    max-width: 130px;
+    height: 46px;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    left: auto;
+    right: 0;
+    bottom: 0;
+    top: 10px; }
+  .header-link-mobile {
+    padding: 10px; }
+    .header-link-mobile svg {
+      color: #000000; }
+  .mobile-cart {
+    position: relative; }
+    .mobile-cart span {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
+      font-size: 11px; }
+  .header-bottom {
+    margin: 60px 0 0 0; }
   .section {
     margin: 70px 0 0 0; }
     .section__title {
@@ -3517,15 +3586,14 @@ footer._hidden {
       width: 100%;
       height: 100%;
       background-color: #ffffff;
-      padding: 100px 40px;
+      padding: 60px 0;
       margin: 0;
       -webkit-transition: all 0.5s ease 0s;
       -o-transition: all 0.5s ease 0s;
       transition: all 0.5s ease 0s;
       z-index: 14; }
     .menu__body._active {
-      left: 0;
-      padding: 100px 20px; }
+      left: 0; }
       .menu__body._active .header-top__list.left {
         width: 100%; }
         .menu__body._active .header-top__list.left .header-top__list-item {
@@ -3554,7 +3622,6 @@ footer._hidden {
     .menu__list:last-child {
       margin: 0; }
     .menu__item {
-      padding: 10px;
       position: relative; }
     .menu__link-btn {
       display: -webkit-box;
@@ -3585,7 +3652,7 @@ footer._hidden {
               transform: rotate(-90deg);
       position: absolute;
       top: -10px;
-      left: 90%; }
+      left: 98%; }
     .menu__icon {
       z-index: 50;
       display: block;
@@ -3597,8 +3664,7 @@ footer._hidden {
       -webkit-transition: all 0.5s ease 0s;
       -o-transition: all 0.5s ease 0s;
       transition: all 0.5s ease 0s;
-      margin-right: auto;
-      margin-top: 30px; }
+      margin-right: auto; }
       .menu__icon span, .menu__icon::before, .menu__icon::after {
         position: absolute;
         left: 0;
@@ -3652,10 +3718,26 @@ footer._hidden {
         -ms-transform: rotate(90deg);
             transform: rotate(90deg);
     position: absolute;
-    top: 20px;
-    left: 0;
+    top: 10px;
+    left: -10px;
+    z-index: 15; }
+  .sub-sub-menu-back-btn._active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 46px;
+    height: 46px;
+    background: url(../images/svg/arrow-down.svg) center no-repeat;
+    background-size: 75%;
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
+    position: absolute;
+    top: -51px;
+    left: 5px;
     z-index: 15; }
   .header-top__list.left {
+    border-top: 1px solid #D6D6D6;
     border-bottom: 1px solid #D6D6D6; }
     .header-top__list.left .header-top__list-item:hover > .header-top__menu-link {
       text-decoration: underline; }
@@ -3672,21 +3754,36 @@ footer._hidden {
     background: #ffffff; }
   .header-top__sub-list-item-col {
     position: relative; }
+  .header-top__sub-list-link-title {
+    display: inline-block;
+    color: #000000;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 25px; }
   .header-top__sub-list-item-col._active > .header-top__sub-list {
     left: 0; }
   .header-top__sub-list-items {
-    grid-template-columns: 1fr; }
+    grid-template-columns: 1fr;
+    padding: 20px 35px; }
   .header-top__sub-list {
     width: 100%;
     height: 100vh;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 61px;
     left: 120%;
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
     background: #ffffff;
-    z-index: 1; }
+    z-index: 1;
+    padding: 10px 50px; }
+    .header-top__sub-list-item {
+      margin-bottom: 20px; }
+    .header-top__sub-list-link {
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 25px; }
   .main-banner {
     margin: 0; }
   .new-collection__title {
@@ -4160,6 +4257,15 @@ footer._hidden {
     padding: 50px 25px; } }
 
 @media screen and (max-width: 425px) {
+  .header-top__logo-img {
+    width: 73px; }
+  .header-top__list.right .menu__item {
+    margin: 0 0 13px 0; }
+  .header-top__menu-link {
+    padding: 10px; }
+  .menu__link-btn {
+    top: 10px;
+    left: 85%; }
   .contacts__cols {
     grid-gap: 15px; }
   .not-found__title {
@@ -4197,3 +4303,10 @@ footer._hidden {
     margin-bottom: 20px; }
   .modal__reviews-btn {
     max-width: 100%; } }
+
+@media screen and (max-width: 374px) {
+  .header-links-mobile {
+    width: 100%;
+    max-width: 105px; }
+  .header-link-mobile {
+    padding: 7px; } }
