--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -300,6 +300,51 @@ header._hidden {
     margin: 0 4px 0 0; }
   .header-top__menu-link:hover {
     text-decoration: underline; }
+  .header-top .cart-link {
+    position: relative; }
+  .header-top .cart-img-block {
+    position: absolute;
+    top: 0;
+    left: auto;
+    right: 0px;
+    width: 20px;
+    height: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 50%;
+    color: #ffffff;
+    font-size: 13px;
+    line-height: 110%;
+    text-align: center;
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: visibility 0.3s ease 0s;
+    -o-transition: visibility 0.3s ease 0s;
+    transition: visibility 0.3s ease 0s; }
+  .header-top .cart-img-block_hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none; }
+  .header-top .cart-img-box {
+    width: 100%;
+    height: 100%;
+    position: relative; }
+  .header-top .cart-img {
+    position: absolute;
+    top: -7px;
+    left: -2px;
+    color: #ffffff; }
   .header-top__logo-box {
     position: absolute;
     top: 20px;
@@ -590,7 +635,7 @@ header._white {
     right: 0;
     bottom: 0; }
     .main-banner__img-box_above {
-      z-index: 1; }
+      z-index: 2; }
     .main-banner__img-box img {
       width: 100%;
       height: 100%; }
@@ -1140,12 +1185,12 @@ header._white {
             -ms-flex-positive: 0;
                 flex-grow: 0;
         border-radius: 100%;
-        background: url("/assets/images/svg/black-circle.svg");
+        background: url("../images/svg/black-circle.svg");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 100%; }
     .good-card__label .span02::before {
-      background: url("/assets/images/svg/white-circle.svg"); }
+      background: url("../images/svg/white-circle.svg"); }
     .good-card__label input:not(:disabled):not(:checked) + span:hover::before {
       -webkit-box-shadow: 0px 0px 3px 3px #999999;
               box-shadow: 0px 0px 3px 3px #999999; }
@@ -1274,9 +1319,6 @@ header._white {
     margin: -6px;
     color: #000000;
     border-radius: 5px; }
-    .good-card__tabs-switch:hover {
-      -webkit-box-shadow: 0 0 2px 2px #3D3D3D;
-              box-shadow: 0 0 2px 2px #3D3D3D; }
     .good-card__tabs-switch::after {
       content: '';
       display: block;
@@ -1294,11 +1336,76 @@ header._white {
   .good-card__tabs-switch._active::after {
     visibility: visible;
     opacity: 1; }
+  .good-card__about-model {
+    min-height: 150px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px; }
+  .good-card__about-model-item {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr)); }
   .good-card__tabs-text {
     font-size: 16px;
     line-height: 140%;
     color: #000000;
     padding: 0 0 5px 0; }
+  .good-card__reviews-block {
+    width: 100%; }
+  .good-card__reviews-slider {
+    width: 100%;
+    max-width: 675px; }
+  .good-card .reviews-slider__container {
+    padding: 50px 0 20px 0; }
+  .good-card .reviews-slider__button-prev, .good-card .reviews-slider__button-next {
+    width: 30px;
+    height: 30px; }
+  .good-card .reviews-slider__button-prev {
+    right: 45px; }
+  .good-card .reviews-slider__item {
+    padding: 0 15px 0 0; }
+  .good-card .good-reviews-row-item-user {
+    margin-bottom: 15px;
+    min-height: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .good-card .good-reviews-row-item-user span {
+      padding: 10px 10px 0 0;
+      white-space: nowrap; }
+    .good-card .good-reviews-row-item-user .user-name {
+      font-weight: bold;
+      font-size: 1.1em; }
+  .good-card .good-reviews-row-item-review-box {
+    min-height: 100px; }
+  .good-card .good-reviews-row-item-title {
+    font-size: 1.1em;
+    line-height: 140%;
+    min-height: 24px; }
+  .good-card .good-reviews-row-item-text {
+    margin-top: 10px;
+    line-height: 120%; }
+  .good-card__reviews-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    max-width: 159px;
+    min-height: 50px;
+    border-radius: 5px;
+    background-color: #3D3D3D;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+    margin: 20px 0; }
 
 .tabs__item {
   display: none; }
@@ -1324,7 +1431,7 @@ header._white {
   z-index: 10; }
 
 .additional {
-  margin: 0 0 0 0; }
+  margin: 50px 0 0 0; }
 
 .help {
   margin: 28px 0 0 0;
@@ -2415,7 +2522,8 @@ footer._hidden {
     margin: 32px 0 0 0;
     width: 100%;
     height: 100%; }
-    .modal__form input {
+    .modal__form input,
+    .modal__form textarea {
       width: 100%;
       min-height: 50px;
       background-color: #F9F9F9;
@@ -2425,6 +2533,8 @@ footer._hidden {
       line-height: 140%;
       color: #000000;
       margin-bottom: 30px; }
+    .modal__form textarea {
+      resize: none; }
   .modal__search {
     max-width: 950px;
     width: 100%;
@@ -2638,6 +2748,46 @@ footer._hidden {
     .modal__sign-up-btn-up:hover {
       -webkit-box-shadow: 0 0 3px 3px #3D3D3D;
               box-shadow: 0 0 3px 3px #3D3D3D; }
+  .modal__subscribe-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    max-width: 450px;
+    min-height: 155px;
+    padding: 20px; }
+  .modal__subscribe-text {
+    padding: 10px;
+    text-align: center;
+    line-height: 140%; }
+  .modal__reviews-btn-block {
+    width: 100%; }
+  .modal__reviews-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    max-width: 159px;
+    min-height: 50px;
+    border-radius: 5px;
+    background-color: #3D3D3D;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+    margin: 20px 0; }
 
 .modal._active {
   opacity: 1;
@@ -2665,7 +2815,7 @@ footer._hidden {
   .good-card {
     margin: 15px 0 0 0; }
     .good-card__images {
-      padding: 0; }
+      padding: 0 60px 0 0; }
   .help__nav {
     margin: 0 70px 0 0; }
   .help__tabs-items {
@@ -2817,6 +2967,10 @@ footer._hidden {
           -ms-flex: auto;
               flex: auto;
       width: 100%; }
+    .good-card__images {
+      padding: 0; }
+    .good-card__reviews-slider {
+      max-width: 100%; }
   .slider-vertical .swiper-button-prev,
   .slider-vertical .swiper-button-next {
     display: block; }
@@ -3221,7 +3375,9 @@ footer._hidden {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
-            flex-direction: column; } }
+            flex-direction: column; }
+  .modal__content {
+    padding: 50px 25px; } }
 
 @media screen and (max-width: 425px) {
   .contacts__cols {
@@ -3258,4 +3414,6 @@ footer._hidden {
     .modal__btn-block a {
       max-width: 100%; }
   .modal__sign-in-btn-in {
-    margin-bottom: 20px; } }
+    margin-bottom: 20px; }
+  .modal__reviews-btn {
+    max-width: 100%; } }
